--- a/Notes Sharing Website/src/components/folderPage/components/styles.css
+++ b/Notes Sharing Website/src/components/folderPage/components/styles.css
@@ -4,7 +4,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
 }
-
+/* 
 h1, h2 {
   font-weight: normal;
   text-align: center;
@@ -20,7 +20,7 @@ h2 {
   font-size: 24px;
   color: #C1C2C3;
   margin-bottom: 20px;
-}
+} */
 
 .box {
   width: 640px;
