--- a/Notes Sharing Website/src/components/uploadSection/styles.css
+++ b/Notes Sharing Website/src/components/uploadSection/styles.css
@@ -8,3 +8,38 @@
     justify-content: center;
     align-items: center;
 }
+
+.upload-btn {
+    border: none;
+    display: flex;
+    padding: 0.75rem 1.5rem;
+    background-color: #FF474C;
+    color: #ffffff;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+    vertical-align: middle;
+    align-items: center;
+    border-radius: 0.5rem;
+    user-select: none;
+    gap: 0.75rem;
+    box-shadow: 0 4px 6px -1px #488aec31, 0 2px 4px -1px #488aec17;
+    transition: all .6s ease;
+}
+
+.upload-btn:hover {
+    box-shadow: 0 10px 15px -3px #488aec4f, 0 4px 6px -2px #488aec17;
+}
+
+.upload-btn:focus,
+.upload-btn:active {
+    opacity: .85;
+    box-shadow: none;
+}
+
+.upload-btn svg {
+    width: 1.25rem;
+    height: 1.25rem;
+}
